added new features and comments

--- a/fraud-analysis.ipynb
+++ b/fraud-analysis.ipynb
@@ -5,7 +5,17 @@
    "id": "6d78a709",
    "metadata": {},
    "source": [
-    "# Setup"
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b0fe81",
+   "metadata": {},
+   "source": [
+    "> Have you ever wondered if 99% accuracy on a model is good? The answer is simple but complicated: Maybe not! In this notebook we'll cover why looking only at accuracy metrics is dangerous, and we'll show other metrics that can contribute to your model evaluation.\n",
+    "\n",
+    "> For this, we are going to use a Credit Card Transactions dataset, with the objective to identify fraudulent transactions. First we'll cover the setup, by checking the data, then we'll do an Exploratory Data Analysis (EDA), to identify possible patterns and insights to use as features in our model, aswell as identify needed transformations. After that, we'll do the feature engineering, by using scaling and categorical encoding. Then we'll cover Undersampling and its importance, and then check the feature importances. Finally but not least important, we'll prepare our validation and test datasets to train, tune and evaluate our models!"
    ]
   },
   {
@@ -113,7 +123,7 @@
     }
    },
    "source": [
-    "# Data Cleansing"
+    "## Data Cleansing"
    ]
   },
   {
@@ -6444,6 +6454,28 @@
    ],
    "source": [
     "evaluate_model(y_test, y_pred_test, y_score_test, normalize_matrix=\"true\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "998d4363",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cee8e1ca",
+   "metadata": {},
+   "source": [
+    "> In this problem, it is crucial to look at other metrics besides accuracy. As we saw, accuracy is one of the worst metrics for this problem, because of the natural imbalance of the dataset.\n",
+    "\n",
+    "> Since our event is related to fraud transactions, i assume the worst cenarios was getting high false negatives (transactions that we identify as non-frauds and ended up being fraudulents). Hence, we used an aproach to consider the recall metric being the most important for the model.\n",
+    "\n",
+    "> Also, the precision of the model is very sensitive, because of the target imbalance. As you can see, only 0.71% or normal transactions were false positives, and it dropped the precision to 33%. That is because a small percentage of normal transactions if predicted wrong, means a high number of events compared to the fraud events in dataset.\n",
+    "\n",
+    "> The best approach to this problem would be having a way to calculate the mean cost of each false positive and false negative. This way, we could approach this tradeoff with better understanding of how much false positives and false negatives costs for the company."
    ]
   }
  ],
